hphp/hack/test/typecheck/array_unification/vec_to_varray_or_darray.php.exp
File "vec_to_varray_or_darray.php", line 11, characters 26-41:
Too few type arguments for this type (Naming[2071])
